# marketplace-backend

./: .gitignore  Cargo.toml  Makefile  a.sql  b.sql  c.sql  package.json
.github/workflows/: backend-ci.yml
api/: Cargo.toml  Procfile  app.yaml
api/application/rest-api-adapter/: Cargo.toml
api/application/rest-api-adapter/src/: lib.rs
api/application/rest-api-adapter/src/api/: mod.rs  projects_api.rs  sponsors_api.rs
api/application/rest-api-adapter/src/dto/: mod.rs  project.rs  projects_dto.rs  sponsors_dto.rs
api/application/rest-api-adapter/src/error/: mod.rs
api/application/rest-api-adapter/src/routes/: projects.rs
api/bootstrap/: Cargo.toml
api/domain/: Cargo.toml
api/domain/src/: lib.rs
api/domain/src/model/: mod.rs  sponsor.rs
api/domain/src/models/: project.rs
api/domain/src/port/input/: mod.rs  sponsor_port.rs
api/domain/src/port/output/: image_storage_port.rs  mod.rs
api/domain/src/ports/input/: mod.rs  project_facade.rs
api/domain/src/ports/output/: mod.rs  project_storage.rs
api/domain/src/use_cases/: mod.rs
api/domain/src/use_cases/sponsor/: create.rs
api/domain/src/usecases/: project.rs
api/src/: main.rs
api/tests/: crypto_quotes_sync_it.rs  payment_it.rs  quote_sync_upon_budget_creation_it.rs  update_user_payout_info_it.rs
application/rest-api-adapter/: Cargo.toml
application/rest-api-adapter/src/: lib.rs
application/rest-api-adapter/src/api/: mod.rs  projects_api.rs
application/rest-api-adapter/src/dto/: mod.rs  projects_dto.rs
common/domain/: Cargo.toml
doc/: data_diagram.md
event-listeners/: Cargo.toml  Procfile
event-listeners/src/: lib.rs  main.rs
event-listeners/tests/: github_indexing_it.rs
github-indexer/src/: main.rs
migrations/2023-06-23-132203_create-projects_registered_contributors-view/: down.sql  up.sql
migrations/2023-08-07-210042_create-contributions-projection/: up.sql
migrations/2023-08-17-143042_2023-08-16_update-contributions-table-and-views/: up.sql
migrations/2023-09-05-092911_migrate-work-items/: up.sql
migrations/2023-09-05-133220_add-code-review-id/: up.sql
migrations/2023-09-05-155357_add-contribution-id/: up.sql
migrations/2023-09-05-194537_create-ignored-contributions-table/: up.sql
migrations/2023-09-06-124029_add-ignored-in-contributions-views/: up.sql
migrations/2023-09-06-154541_update-code-review-details-id/: up.sql
migrations/2023-09-11-133622_fix-contributions-and-work-items-relationships/: up.sql
migrations/2023-09-15-131612_uppercase-contribution-type/: up.sql
migrations/2023-09-19-124157_compute-contributions-and-contributors-in-views/: up.sql
migrations/2023-09-20-132835_fix-contribution_counts/: up.sql
migrations/2023-09-20-142450_fix-contribution_counts-again/: up.sql
migrations/2023-09-29-055836_add-pr-author-as-contributor/: up.sql
migrations/2023-09-29-140256_fix-duplicate-contributions/: up.sql
migrations/2023-10-02-153619_fix-contribution-counts/: up.sql
migrations/2023-12-06-094848_add-lords-token/: up.sql
migrations/2023-12-21-151512_add-usdc-token/: up.sql
migrations/2023-12-21-175143_add-usdc-token-to-sync-list/: up.sql
migrations/2023-12-22-125521_rename-stark-to-strk/: down.sql  up.sql
rest_api_contract/: marketplace-api-contract.yaml
scripts/: promote.sh
(+145 files in other folders)
