[package]
name = "rest_api_adapter"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
# Local dependecies
domain = { path = "../../common/domain", features = ["rocket"] }
olog = { path = "../../common/olog" }

# Http server
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
url = { version = "2.2.2", features = ["serde"] }
http-api-problem = { version = "0.56.0", features = ["rocket"] }

# Tracing
tracing = "0.1"

# Errors
anyhow = "1.0.72"
thiserror = "1.0.43"

# Serde
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }