[package]
authors = ["OnlyDust <tech@onlydust.xyz>"]
description = "REST API adapter"
edition = "2021"
homepage = "https://onlydust.xyz"
license-file = "LICENSE"
name = "rest_api_adapter"
readme = "README.md"
repository = "https://github.com/onlydustxyz/marketplace-backend"
version = "1.0.0"

[dependencies]

# Async
async-trait = "0.1.56"
futures = { version = "0.3.21", features = ["alloc"] }
tokio = { version = "1.18.2", features = ["full"] }

# Core types
uuid = { version = "1.3.3", default_features = false, features = [
	"v4",
	"serde",
] }
url = { version = "2.2.2", features = ["serde"] }

# Http Server
http-api-problem = { version = "0.56.0", features = ["rocket"] }
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
reqwest = { version = "0.11", default-features = false }

# Tracing
tracing = "0.1"

# Errors
anyhow = "1.0.72"
thiserror = "1.0.43"

# Serde
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }

# Datetime
chrono = "0.4"

# Utils
derive_more = "0.99.17"
derive-new = "0.5.9"
rust_decimal = "1.29.1"

# Local dependecies
domain = { path = "../../../common/domain", features = ["rocket"] }
presentation = { path = "../../../common/presentation" }
olog = { path = "../../../common/olog" }
api-domain = { path = "../../domain" }

[dev-dependencies]
testing = { path = "../../../common/testing" }
rstest = "0.15.0"
mockall = "0.11.2"
mockall_double = "0.3.0"
jsonwebtoken = "8.3.0"
